--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,3 +93,9 @@ a.nav-link {
 .form label {
   margin: 1rem 0;
 }
+
+.main {
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bolder;
+}
